[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotractive"
version = "0.7.0"
description = "Asynchronous Python client for the Tractive REST API"
readme = "README.md"
license = "MIT"
authors = [{name = "Gleb Sinyavskiy", email = "zhulik.gleb@gmail.com"}]
requires-python = ">=3.10"
keywords = ["tractive", "rest", "api", "aio", "async", "await"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.1",
    "yarl>=1.7.2",
]

[project.urls]
Homepage = "https://github.com/zhulik/aiotractive"
Repository = "https://github.com/zhulik/aiotractive"

[tool.setuptools.packages.find]
include = ["aiotractive*"]

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = '''
^/\.git
^/\.vscode
^/\.github
'''

[tool.isort]
line_length = 120
