[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotractive"
version = "0.7.0"
dynamic = ["dependencies", "readme"]

[tool.ruff]
target-version = "py314"

lint.select = ["ALL"]

lint.ignore = [
    "COM812",   # Trailing comma missing
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D401",     # First line of docstring should be in imperative mood
    "E501",     # Line too long
    "EM101",    # Exception must not use a string literal, assign to variable first
    "FBT001",   # Boolean-typed positional argument in function definition
    "PLR0913",  # Too many arguments in function definition
    "S101",     # Use of assert detected
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY301",   # Abstract raise to an inner function
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools.package-data]
aiotractive = ["py.typed"]
